--- a/privacy.html
+++ b/privacy.html
@@ -58,7 +58,7 @@
         </div>
         <div class="offcanvas-body p-0">
             <ul class="navsbar__mobile__list justify-content-end ">
-                <li><a href="#" >Home</a></li>
+                <li><a href="./index.html" >Home</a></li>
                 <li><a href="./termsAndConditions.html" >Terms and Conditions</a></li>
                 <li><a href="./privacy.html" class="active">Privacy Policy</a></li>
                 <a href="" class="navsbar__mobile__list__login">login</a>
