--- a/index.html
+++ b/index.html
@@ -168,22 +168,12 @@
                 </div>
                 
             </div>
-            <div class="joinUsNow__first"> 
-                <div class="joinUsNow__first__business">
-                    <img src="./content/assets/images/home/for Businesses.png" alt="">
-                </div>
-                <p class="joinUsNow__first__title">Join us now</p>
+            <div class="joinUsNow__item joinUsNow__item__mobile">
+                <img src="./content/assets/images/home/join us now.png" alt="">
+                <img src="./content/assets/images/home/profit.png" alt="">
             </div>
-            <div class="joinUsNow__second">
-                <div class="joinUsNow__second__toogle">
-                    <img src="./content/assets/images/home/Group 427321664.png" alt="">
-                    <div class="joinUsNow__second__profit">
-                        <img src="./content/assets/images/home/Group 427321680.png" alt="">
-                    </div>
-                </div>
-            </div>
-            <a href="" class="joinUsNow__third"> 
-                <img src="./content/assets/images/home/Frame 427321689.png" alt="">
+            <a href="" class="joinUsNow__item">
+                <img src="./content/assets/images/home/partner.png" alt="">
             </a>
         </div>
     </main>
